# rust-cheat-sheet

./: .gitignore  Cargo.toml  LICENSE  README.md  flake.nix
src/: lib.rs  main.rs
src/advanced/: mod.rs  smart_pointers.rs  traits.rs
src/basics/: arrays_slices.rs  closures.rs  conditionals.rs  documentation.rs  functions.rs  loops.rs  mod.rs  numbers.rs  options.rs  results.rs  strings.rs
src/collections/: hashmaps.rs  iterators.rs  mod.rs  vecs.rs
src/error_handling/: box_dyn_error.rs  custom_error.rs  from_trait.rs  mod.rs  question_mark.rs
src/macros/: advanced.rs  built_in.rs  declarative.rs  formatting.rs  mod.rs
src/ownership/: borrowing.rs  lifetimes.rs  mod.rs  move_semantics.rs
src/std_lib/: fs.rs  mod.rs  time.rs
src/types/: custom_traits.rs  enums.rs  generics.rs  mod.rs  pattern_matching.rs  structs.rs
